--- a/scss/_mycollaborations.scss
+++ b/scss/_mycollaborations.scss
@@ -7,21 +7,20 @@
   }
   button.new-collaboration {
       width: 100px;
-      margin: 4rem auto;
+      margin: 2rem auto;
       display: block;
   }
   div.collaboration {
     display: inline-block;
     cursor: pointer; 
     width: 50vw;
-    height: 50vw;
-    padding: 3%;
-    img {
-      width: 100%;
-      height: 100%;
+    .thumbnail {
+      width: 45vw;
+      height: 45vw;
+      margin: auto auto;
+      background-size: cover;
+      background-position: center center;
       border-radius: 50%;
-      border-width: 5px;
-      border-color: $color-a;  
     }
     h2 {
       font-family: $title-font-family;
